# palimpsest

./: demo_retrieval.py  observer.pem  observer.pem.pub
.github/workflows/: ci.yml
palobserver/: README.md  demo_retrieval.py  observer.pem  observer.pem.pub  pyproject.toml
palobserver/rules/: core.yaml
palobserver/src/palobserver/: bundle.py  callback.py  cli.py  crypto.py  ledger.py  rules.py
rules/: core.yaml
tests/: test_bundle.py  test_crypto.py  test_rules.py  test_rules_mismatch.py
